
cc_library(
	name = "graph_parallel",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_mpi//:mpi",
		"@com_github_bazelboost_graph//:graph",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_property_map//:property_map",
		"@com_github_bazelboost_optional//:optional"
	],
)
